--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -286,7 +286,7 @@ Na figura \ref{fig:regiao_abertura} pode-se ver o resultado da execução da opera
 \end{figure}
 
 
-\subsection{Esqueletonização}
+\subsection{Esqueletonização} \label{sub:fundteor_esqueletonizacao}
 
 Define-se esqueleto conforme segue \cite{GONZALEZ-2006}.
 
@@ -369,7 +369,7 @@ Aplicando-se o método de esqueletonização mencionado anteriormente em figuras re
 \end{figure}
 
 
-\subsection{Normalização}
+\subsection{Normalização} \label{sub:fundteor_normalizacao}
 
 A análise de componentes principais pode ser empregada para normalizar imagens em função de rotação, translação e tamanho  \cite{GONZALEZ-2006}. Explica-se a seguir alguns conceitos necessários para efetuar a normalização utilizando a analise de componentes principais e em seguida o processo de normalização utilizando componentes principais.
 
@@ -589,7 +589,7 @@ Caso se deseje normalizar a imagem com relação ao tamanho pode-se dividir o valo
 Esta seção apresenta técnicas e algoritmos para realizar a descrição de imagens, tais como extração de propriedades básicas de regiões e descritores de \emph{fourier}.
 
 
-\subsection{Propriedades de regiões}
+\subsection{Propriedades de regiões} \label{subsec:propriedades}
 
 Propriedades básicas de regiões, como área e excentricidade, podem ser usadas para descrever imagens. A seguir descreve-se algumas propriedades básicas de regiões, principalmente aquelas que possuem como saída um valor escalar, visto que são facilmente adicionados à um vetor descritor.
 
