--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -792,7 +792,7 @@ Quando os $P$ coeficientes de menor frequência são escolhidos para reconstituir 
 Esta seção apresenta uma visão geral de reconhecimento de padrões utilizando redes neurais.
 
 
-\subsection{Redes neurais}
+\subsection{Redes neurais}  \label{subsec:fundteor_redes_neurais}
 
 Redes neurais são elementos não lineares (chamados neurônios) interconectados da mesma maneira que se acredita que os neurônios estão conectados no cérebro. Usam-se essas redes para tomadas de decisão após seus coeficientes terem sido ajustados por meio de apresentações sucessivas de conjuntos de dados de treinamento \cite{GONZALEZ-2006}.
 
