--- a/reflatex.bib
+++ b/reflatex.bib
@@ -223,19 +223,19 @@
   owner = {telmo},
   timestamp = {2013.11.16@MISC{MATHWORKS-HELP,
 	
-	  author = {MathWorks},
+	 author = {MathWorks},
 	
-	  title = {Image Enhancement and Analysis},
+	 title = {Image Enhancement and Analysis},
 	
-	  year = {2013},
+	 year = {2013},
 	
-	  owner = {telmo},
+	 owner = {telmo},
 	
-	  timestamp = {2013.11.16},
+	 timestamp = {2013.11.16},
 	
-	  url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
+	 url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
 	
-	  urlaccessdate = {06 de Março de 2012}
+	 urlaccessdate = {06 de Março de 2012}
 	
 	}},
   url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
@@ -249,6 +249,16 @@
   owner = {telmo},
   timestamp = {2013.11.19},
   url = {http://www.mathworks.com/help/images/ref/regionprops.html},
+  urlaccessdate = {06 de Março de 2012}
+}
+
+@MISC{MATHWORKS-HELP-3,
+  author = {MathWorks},
+  title = {Multilayer Neural Network Architecture},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.23},
+  url = {http://www.mathworks.com/help/nnet/ug/multilayer-neural-network-architecture.html},
   urlaccessdate = {06 de Março de 2012}
 }
 
