--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -648,6 +648,9 @@ O tamanho do eixo principal de uma região diz respeito ao tamanho do maior eixo 
 
 O número de Euler é dado pelo total de objetos desconexos da região subtraindo o total de cavidades da região \cite{MATHWORKS-HELP-2}.
 
+\subsubsection{Centroide}
+
+O centroide de uma imagem é dado pelo centro de massa da imagem \cite{MATHWORKS-HELP-2}.
 
 \subsection{Descritores de \emph{fourier}}
 
