--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -121,7 +121,7 @@ Tanto esta etapa, quanto a estimativa de angulo descrita na próxima seção, seria
 	\label{fig:desenv_desc3}
 \end{figure}
 
-A diferença entre o autovetor calculado para cada caso é tratada na etapa de estimativa de ângulo e recebe como entrada o descritor calculado aqui. O descritor portanto deve conter informações relacionadas à posição do objeto na imagem normalizada. Sendo assim utilizou-se para essa tarefa um descritor contendo 10 descritores de \emph{fourier}, conforme representado na figura \ref{fig:desenv_desc2}.
+A diferença entre o autovetor calculado para cada caso é tratada na etapa de estimativa de ângulo que recebe como entrada o descritor calculado aqui. O descritor portanto deve conter informações relacionadas à posição do objeto na imagem normalizada. Utilizou-se para essa tarefa um descritor contendo 10 descritores de \emph{fourier} juntamente com as coordenadas do centroide da imagem. O descritor pode ser visto na figura \ref{fig:desenv_desc2}. 
 
 \begin{figure}[H]
 	\centering
@@ -133,7 +133,7 @@ A diferença entre o autovetor calculado para cada caso é tratada na etapa de est
 
 \section{Estimativa de ângulo} \label{sec:desenv_class2}
 
-Finalmente a última etapa recebe como entrada um descritor da imagem normalizada, a classe a qual pertence o objeto e o autovetor utilizado na normalização. O objetivo dessa etapa é fornecer o angulo de rotação do objeto na imagem.
+Finalmente a última etapa recebe como entrada um descritor da imagem normalizada, a classe a qual pertence o objeto e o autovetor utilizado na normalização. O objetivo dessa etapa é fornecer o ângulo de rotação do objeto na imagem.
 
 Considere a figura \ref{fig:desenv_class3}. Os eixos $x,y$ são as coordenadas da imagem. O eixo $x'$ é o eixo que foi assumido como sendo o zero para o objeto da figura. $A$ é o autovetor calculado na etapa de normalização. Pela figura tem-se então a equação \ref{eq:desenv_beta}.
 
@@ -153,12 +153,12 @@ Onde:
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{./figs/classificacao_3.jpg}
-	\caption{Representação do autovetor (em vermelho), eixos da imagem (em amarelo) e eixo do objeto (em azul).}
+	\caption{Representação do autovetor (em vermelho), dos eixos da imagem (em amarelo) e do eixo do objeto (em azul).}
 	\fonte{Autoria própria}
 	\label{fig:desenv_class3}
 \end{figure}
 
-É necessário portanto determinar o valor $k$ para cada imagem normalizada. Utilizou-se para essa tarefa uma segunda rede neural. Essa rede recebe como entrada um descritor da imagem normalizada e informa na saída o valor de $k$. Para cada classe é gerada uma rede diferente, visto que as variações são diferentes de classe para classe. Após obter o valor $k$ da rede basta utilizar a equação \ref{eq:desenv_beta} para determinar o angulo $\beta$ do objeto. Esse processo está resumido na figura \ref{fig:desenv_class2}.
+É necessário portanto determinar o valor de $k$ para cada imagem normalizada. Utilizou-se para essa tarefa uma segunda rede neural. Essa rede recebe como entrada um descritor da imagem normalizada e informa na saída o valor de $k$. Para cada classe é gerada uma rede diferente, visto que as variações são diferentes de classe para classe. Após obter o valor $k$ da rede basta utilizar a equação \ref{eq:desenv_beta} para determinar o angulo $\beta$ do objeto. Esse processo está resumido na figura \ref{fig:desenv_class2}.
 
 \begin{figure}[H]
 	\centering
@@ -168,6 +168,9 @@ Onde:
 	\label{fig:desenv_class2}
 \end{figure}
 
+A rede utilizada nessa etapa possui duas camadas, 12 entradas e uma saída. A primeira camada é formada por 7 \emph{perceptrons}. A melhor quantidade de perceptrons foi determinada empiricamente. A saída da rede possui um único perceptron pois a única saída da rede é o valor de $k$. A função de ativação da primeira camada da rede é a sigmoide pois permite o aprendizado de não linearidades. A segunda camada da rede possui uma função linear, $y=x$, favorecendo uma ampla faixa de valores de saída para $k$ \cite{MATHWORKS-HELP-3}.
+
+Para o processo de treinamento da rede são utilizadas as mesmas amostras que foram utilizadas para o treinamento da rede responsável pela classificação do objeto. Em seguida são executadas as etapas descritas nas seções anteriores até a obtenção do descritor de entrada da rede. Além disso é necessário o conhecimento do ângulo em que o objeto se encontra para o cálculo de $k$ pela equação \ref{eq:desenv_beta}. Uma vez tendo o valor de $k$ e o descritor de entrada é possível treinar a rede.
 
 \section{Classificação: treinamento e topologia} \label{sec:desenv_class3}
 
